# kill-nvda-remotely

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  client.bat  client.c  client.cpp  client.py  config.ini  config.ini.example  makefile  readme.txt  server.bat  server.c  server.cpp  server.py
